lisp/src/lisp_parser.peg
grammar LispParser

program       <-  cell* %make_program

cell          <-  _* expression _* %make_cell

expression    <-  list / atom

atom          <-  (boolean / number / symbol) !(!delimiter .) %make_atom

list          <-  "(" cell* ")" %make_list

boolean       <-  "#t" %make_true / "#f" %make_false

number        <-  "-"? ("0" / [1-9] [0-9]*) ("." [0-9]+)? %make_number

symbol        <-  symbol_char+ %make_symbol

symbol_char   <-  !delimiter .

delimiter     <-  "#" / "(" / ")" / _

_             <-  [ \n\r\t]
